@@ -1,3 +1,4 @@
+	Random image added to index page
 	Email alerts added for changes
 	Surnames list added
 	Small xhtml changes to ensure tables correctly formed
